some bux fix for exceptions