@@ -1,8 +1,11 @@
 package com.mohammad.relief.filter;
 
 import com.mohammad.relief.security.JwtUtil;
-import com.mohammad.relief.service.CustomUserDetailsService;
-import jakarta.validation.constraints.NotNull;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -12,14 +15,9 @@ import org.springframework.security.web.authentication.WebAuthenticationDetailsS
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -28,9 +26,9 @@ public class JwtFilter extends OncePerRequestFilter {
     private final JwtUtil jwtUtil;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain chain)
+    protected void doFilterInternal(@NonNull HttpServletRequest request,
+                                    @NonNull HttpServletResponse response,
+                                    @NonNull FilterChain chain)
             throws ServletException, IOException {
 
         final String header = request.getHeader("Authorization");
@@ -42,7 +40,7 @@ public class JwtFilter extends OncePerRequestFilter {
 
         final String token = header.split(" ")[1].trim();
 
-        if (!jwtUtil.validateToken(token)) {
+        if (Boolean.FALSE.equals(jwtUtil.validateToken(token))) {
             chain.doFilter(request, response);
             return;
         }
@@ -53,7 +51,7 @@ public class JwtFilter extends OncePerRequestFilter {
 
         Collection<SimpleGrantedAuthority> authorities = Arrays.stream(roles.split(","))
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
 
         UsernamePasswordAuthenticationToken authentication =
                 new UsernamePasswordAuthenticationToken(
@@ -66,51 +64,4 @@ public class JwtFilter extends OncePerRequestFilter {
         chain.doFilter(request, response);
     }
 
-//    @Override
-//    protected void doFilterInternal(
-//            HttpServletRequest request,
-//            HttpServletResponse response,
-//            FilterChain chain
-//    ) throws ServletException, IOException {
-//        try {
-//            String jwt = extractJwtFromRequest(request);
-//
-//            if (jwt != null) {
-//                String username = jwtUtil.extractEmail(jwt);
-//
-//                if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-//                    UserDetails userDetails = userDetailsService.loadUserByUsername(username);
-//
-//                    if (jwtUtil.validateToken(jwt, userDetails)) {
-//                        authenticateUser(userDetails, request);
-//                        log.debug("User authenticated successfully: {}", username);
-//                    }
-//                }
-//            }
-//
-//            chain.doFilter(request, response);
-//        } catch (Exception e) {
-//            log.error("Cannot set user authentication: {}", e.getMessage());
-//            chain.doFilter(request, response);
-//        }
-//    }
-//
-//    private String extractJwtFromRequest(HttpServletRequest request) {
-//        String bearerToken = request.getHeader("Authorization");
-//        if (bearerToken != null && bearerToken.startsWith("Bearer ")) {
-//            return bearerToken.substring(7);
-//        }
-//        return null;
-//    }
-//
-//    private void authenticateUser(UserDetails userDetails, HttpServletRequest request) {
-//        UsernamePasswordAuthenticationToken authentication =
-//            new UsernamePasswordAuthenticationToken(
-//                userDetails,
-//                null,
-//                userDetails.getAuthorities()
-//            );
-//        authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-//        SecurityContextHolder.getContext().setAuthentication(authentication);
-//    }
 }
